Fix fatal bug of orbit slider on wordpress, fix figure hover border color, re-position of orbit slider, make figure auto resize to fit layout if it's too large, change default orbit slide images to 805x360

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ div.narga-header { margin: 20px 0; }
 /* -----------------------------------------
 :: Orbit Navigation appear when hover mouse
 ----------------------------------------- */
-.orbit-wrapper .slider-nav span { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0); opacity: 0; -webkit-transition: opacity 400ms; -moz-transition: opacity 400ms; -o-transition: opacity 400ms; transition: opacity 400ms; }
+.orbit-wrapper .slider-nav span { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0); opacity: 0; -webkit-transition: opacity 400ms; -moz-transition: opacity 400ms; -o-transition: opacity 400ms; transition: opacity 400ms;}
 .orbit-wrapper:hover .slider-nav span { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100); opacity: 1; }
 
 /* -----------------------------------------
@@ -67,9 +67,9 @@ article.odd {clear:left;}
 .aligncenter { display: block; margin: 18px auto; }
 
 /* Add HTML5 Class for Images */
-figcaption { padding: 8px 10px; font-size: 13px; font-size: 1.3rem; line-height: 18px; color: #555; }
-.wp-caption {background-color:#e9e9e9;display: block;padding: 4px;line-height: 20px;border: 1px solid rgb(221, 221, 221);border-radius: 4px 4px 4px 4px;box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.055);transition: all 0.2s ease-in-out 0s;}
-.wp-caption:hover {background-color:#fff;border-color: rgb(0, 136, 204);box-shadow: 0px 1px 4px rgba(0, 105, 214, 0.25);}
+figure.wp-caption {background-color:#e9e9e9;padding: 4px;line-height: 20px;border: 1px solid rgb(221, 221, 221);border-radius: 4px 4px 4px 4px;box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.055);transition: all 0.2s ease-in-out 0s;max-width:100%;}
+figure.wp-caption:hover {background-color:rgba(255,255,255,0.6);box-shadow:0px 1px 0px rgba(0,0,0,0.15);}
+figcaption { padding: 8px 10px; font-size: 13px; font-size: 1.3rem; line-height: 18px; color: #555;}
 
 /* Label Adjustment */
 .tags a {color:#fff;font-weight:normal;}
